--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "next-blog-app",
+  "name": "blog-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.5",
-    "bcryptjs": "^3.0.2",
-    "mongoose": "^8.15.1",
     "next": "14.0.4",
-    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.3"
+    "mongoose": "^8.0.0",
+    "next-auth": "^4.24.5",
+    "bcryptjs": "^2.4.3",
+    "react-toastify": "^9.1.3",
+    "axios": "^1.6.2",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8",
+    "autoprefixer": "^10.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "eslint-config-next": "14.0.4"
   }
 }
