--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
+env:
+  NODE_ENV: production
+  NEXT_PUBLIC_BASE_PATH: /modern-blog-app
+
 jobs:
   build:
     runs-on: ubuntu-latest
