--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.1",
+    "axios": "^1.9.0",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.0.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.11",
+    "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
-    "mongoose": "^8.0.0",
-    "next-auth": "^4.24.5",
-    "bcryptjs": "^2.4.3",
     "react-toastify": "^9.1.3",
-    "axios": "^1.6.2",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8",
-    "autoprefixer": "^10.0.1"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
