--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "autoprefixer": "^10.0.1",
-    "axios": "^1.9.0",
-    "bcryptjs": "^2.4.3",
-    "mongoose": "^8.0.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^3.0.2",
+    "mongoose": "^8.0.3",
     "next": "14.0.4",
-    "next-auth": "^4.24.11",
-    "postcss": "^8",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^9.1.3",
-    "tailwindcss": "^3.3.0"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
